--- a/nicepage.css
+++ b/nicepage.css
@@ -34795,15 +34795,12 @@ a.u-link.u-text-hover-grey-90:hover {
 /*end-variables sitestylecss*/
 .u-header .u-section-row-1 {
   background-image: none;
-}
-
-.u-header .u-sheet-1 {
-  min-height: 58px;
+  min-height: 60px;
 }
 
 .u-header .u-image-1 {
-  width: 108px;
-  height: 57px;
+  width: 116px;
+  height: 60px;
   margin: 1px auto 1px 0;
 }
 
@@ -34811,7 +34808,7 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 100%;
   height: 100%;
 }
-.u-header .u-sheet-2 {
+.u-header .u-sheet-1 {
   min-height: 100px;
 }
 
@@ -34841,18 +34838,38 @@ a.u-link.u-text-hover-grey-90:hover {
   letter-spacing: 0px;
   font-weight: 700;
 }
-
+@media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    width: calc(((100% - 1140px) / 2) + 166px);
+    height: 59px;
+  }
+}
 @media (max-width: 1199px) {
   .u-header .u-logo-image-2 {
     max-width: 80px;
     max-height: 80px;
   }
 }
+@media (max-width: 991px) {
+  .u-header .u-image-1 {
+    width: calc(((100% - 1140px) / 2) + 276px);
+  }
+}
 
+@media (max-width: 767px) {
+  .u-header .u-image-1 {
+    width: calc(((100% - 1140px) / 2) + 366px);
+  }
+}
 
-
-
-
+@media (max-width: 575px) {
+  .u-header .u-image-1 {
+    width: 119px;
+    height: 61px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
 
 .u-footer {
   background-image: none;
